--- a/app/Modules/Load/styles.css
+++ b/app/Modules/Load/styles.css
@@ -20,7 +20,7 @@ body.fontLoaded {
 
 .wrapper {
     max-width: calc(768px + 16px * 2);
-    margin: 0 auto;
+    margin: 50% 0 0 0;
     display: flex;
     min-height: 100%;
     padding: 0 16px;
