--- a/app/Modules/Login/Pages/LoginPage/styles.css
+++ b/app/Modules/Login/Pages/LoginPage/styles.css
@@ -1,36 +1,93 @@
-html,
-body {
-    height: 100%;
-    width: 100%;
+.login{
+	position:fixed;
+	top:0;
+	left:0;
+	width: 100%;
+	height: 100%;
+	background: url(../../Images/dam-bg.jpg);
+	background-position: top center;
+	z-index: 99;
+}
+.systemTitle{
+	width: 410px;
+	height: 107px;
+	background: url(../../Images/logo.png) no-repeat;
+	position: absolute;
+	top: 32%;
+	left: 50%;
+	margin: -120px 0 0 -250px;
+}
+.loginBox{
+	width: 410px;
+	height: 330px;
+	background: rgba(255,255,255,.7);
+	position: absolute;
+	left: 50%;
+	margin-left: -250px;
+	top: 28%;
+	padding: 80px 0 0 0;
+	text-align: center;
+	box-shadow: 0 5px 10px rgba(0,0,0,.5);
+}
+.loginBox label{
+	color: white;
+	font-size: 18px;
+	font-family: "微软雅黑", "Microsoft YaHei";
+	line-height: 30px;
+	font-weight: normal;
+	margin: 0 10px 0 0;
+	display:inline-block;
 }
 
-body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+.loginBox input{
+	width: 265px;
+	height: 35px;
+	margin: 0 0 30px 0;
+	padding: 5px;
+	border: 1px solid #ccc;
+	font-size: 16px;
+	font-family: "微软雅黑", "Microsoft YaHei";
+	background: white;
+	border: 1px solid #aaa;
 }
 
-body.fontLoaded {
-    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+.loginBox input:focus{
+	box-shadow: 0 0 10px #5581ba;
 }
 
-:global(#app) {
-    background-color: #FAFAFA;
-    min-height: 100%;
-    min-width: 100%;
+.loginBox label{
+	width: 265px;
+	height: 35px;
+	line-height:20px;
+	margin: -20px 0 0 0;
+	text-align: left;
+	color: #5A7B9A;
+	font-size: 14px;
 }
 
-.wrapper {
-    max-width: calc(768px + 16px * 2);
-    margin: 0 auto;
-    display: flex;
-    min-height: 100%;
-    padding: 0 16px;
-    flex-direction: column;
+.loginBox input[type=password]{
+	margin: 0 0 10px 0;
 }
 
-.section {
-    margin-top: 20px;
+.loginBox input[type=checkbox]{
+	width: auto;
+	height: auto;
+	margin: 0;
 }
 
-.language {
-    float: left;
+.loginBox button{
+	width: 265px;
+	height: 35px;
+	font-size: 16px;
+	font-family: "微软雅黑", "Microsoft YaHei";
+	background: #5a79ba;
+	color: white;
+	border: none;
+} 
+
+.loginBox .error{
+	width: 265px;
+	height: 35px;
+	color: #FF0000;
+	text-align: center;
 }
