--- a/app/Modules/Base/Pages/BasePage/styles.css
+++ b/app/Modules/Base/Pages/BasePage/styles.css
@@ -19,7 +19,7 @@ h1 h2 h3 h4 h5 h6 {
 }
 
 :global(#app) {
-    background-color: #FAFAFA;
+    background-color: #FFFFFF;
     height: 100%;
     min-width: 1260px;
     position: relative;
