--- a/app/Modules/Index/Pages/IndexPage/styles.css
+++ b/app/Modules/Index/Pages/IndexPage/styles.css
@@ -25,13 +25,11 @@ p,h1,h2,h3,h4,h5,h6 {
 .header {
     position: fixed;
     width: 100%;
-
-    padding-top: 4rem;
-    padding-bottom: 3rem;
+    padding-top: 20px;
+    padding-bottom: 20px;
     margin-bottom: 0;
-    
     z-index: 9;
-    background: white;
+    background: #f5f5f5;
 }
 
 .row-container {
@@ -40,25 +38,24 @@ p,h1,h2,h3,h4,h5,h6 {
 }
 
 .route-body {
-    padding-top: 3rem;
+    padding-top: 60px;
     margin-bottom: 0;
 }
 
 .row-2 {
-    display: flex;
-    margin-right: 0.75rem;
-    margin-left: 0.75rem;
-    font-size: 2rem;
+    font-size: 26px;
 }
 
-.nav-title a{
+.nav-title button{
     text-decoration: none;
     color: #666;
     background-color: transparent;
     position: relative;
-    margin-left: 1.5rem;
+    margin-right: 12px;
     width: 75px;
     display: inline-block;
+    font-size: 22px;
+    outline:none;
 }
 
 
