--- a/app/Modules/Index/Pages/ReadmePage/styles.css
+++ b/app/Modules/Index/Pages/ReadmePage/styles.css
@@ -1,5 +1,5 @@
 .route-body {
-    padding-top: 3rem;
+    padding-top: 60px;
     margin-top: 0;
 }
 
@@ -9,8 +9,5 @@
 }
 
 .row-2 {
-    display: flex;
-    margin-right: 0.75rem;
-    margin-left: 0.75rem;
-    font-size: 2rem;
+    font-size: 26px;
 }
