--- a/app/Modules/Index/Pages/IndexPage/styles.css
+++ b/app/Modules/Index/Pages/IndexPage/styles.css
@@ -32,6 +32,14 @@ p,h1,h2,h3,h4,h5,h6 {
     background: #f5f5f5;
 }
 
+.footer {
+    position: absolute;
+    width: 100%;
+    height: 60px;
+    bottom: 0;
+    z-index: 9;
+}
+
 .row-container {
     max-width: 960px;
     margin: 0 auto;
@@ -53,7 +61,7 @@ p,h1,h2,h3,h4,h5,h6 {
     /*position: relative;*/
     float: left;
     margin-right: 12px;
-    width: 75px;
+    width: 85px;
     display: inline-block;
     font-size: 22px;
     outline:none;
